--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "COPYCAT SPAM USERBOT",
+  "name": "KAAL SPAM USERBOT",
   "description": "A SPAM USERBOT MADE BY KAAL ....... Owner - @Murat_30_God",
   "logo": "https://telegra.ph/file/5bb2ae9514d561c440879.jpg",
   "keywords": [
